@@ -43,6 +43,8 @@
 - NEW: Revision graph can be collapsed / expanded as well as 
        cut and glued. (Stefan Fuhrmann)
 - NEW: Helper dialog to resolve tree conflicts. (Stefan)
+- NEW: TortoiseBlame shows the revision range in the title. See
+       issue #429 for details. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
